--- a/lab06/15/input-artifact-git.yaml
+++ b/lab06/15/input-artifact-git.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Workflow
 metadata: 
   generateName: input-artifact-git-
-  namespace: default: 
+  namespace: default 
 spec: 
   serviceaccount: workflow 
   entrypoint: pipe 
