--- a/lab06/06/suspend-approval.yaml
+++ b/lab06/06/suspend-approval.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Workflow
 metadata:
-  generateName: suspend-template-
+  generateName: suspend-approval-
 spec:
   entrypoint: suspend
   templates:
@@ -11,12 +11,21 @@ spec:
         template: whalesay
     - - name: approve
         template: approve
+    - - name: delay
+        template: delay
     - - name: release
         template: whalesay
+    - - name: deploy
+        template: whalesay 
+    - - name: push
+        template: whalesay 
 
   - name: approve
-    suspend: 
-    activeDeadlineSeconds: 60          # terminate container template after 10 seconds
+    suspend: {}
+
+  - name: delay
+    suspend:
+      duration: "20"    # Must be a string. Default unit is seconds. Could also be a Duration, e.g.: "2m", "6h", "1d"
 
   - name: whalesay
     container:
