--- a/lab01/07/04-selfheal-app.yaml
+++ b/lab01/07/04-selfheal-app.yaml
@@ -1,24 +1,21 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata: 
-  name: user00-kustomize-app 
+  name: user00-selfheal-app 
   namespace: argocd
 spec: 
   destination:
     namespace: user00
     server: "https://kubernetes.default.svc"
-  project: user00-dev-project
+  project: default
   source: 
-    path: kustomize-guestbook 
+    path: guestbook 
     repoURL: "https://github.com/yoonjk/argocd-demo.git"
     targetRevision: master 
-#    kustomize: 
-#      namePrefix: staging-
-#      commonLabels:
-#        app: demo
   syncPolicy:
-    syncOptions:
-    - CreateNamespace=true
+    automated: 
+      selfheal: true
+
 
     
 
