--- a/lab01/07/03-prune-app.yaml
+++ b/lab01/07/03-prune-app.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata: 
-  name: user00-kustomize-app 
+  name: user00-app 
   namespace: argocd
 spec: 
   destination:
@@ -9,7 +9,7 @@ spec:
     server: "https://kubernetes.default.svc"
   project: default
   source: 
-    path: kustomize-guestbook 
+    path: guestbook 
     repoURL: "https://github.com/yoonjk/argocd-demo.git"
     targetRevision: master 
   syncPolicy:
