--- a/lab01/07/04-selfheal-app.yaml
+++ b/lab01/07/04-selfheal-app.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata: 
-  name: user00-selfheal-app 
+  name: user00-app 
   namespace: argocd
 spec: 
   destination:
@@ -14,7 +14,7 @@ spec:
     targetRevision: master 
   syncPolicy:
     automated: 
-      selfheal: true
+      selfHeal: true
 
 
     
