Modify argo workflow sensor test

--- a/lab01/08/git-dirs.yaml
+++ b/lab01/08/git-dirs.yaml
@@ -6,18 +6,18 @@ metadata:
 spec:
   generators:
     - git:
-        repoURL: https://github.com/yoonjk/argocd-demo
-        revision: HEAD
+        repoURL: https://github.com/yoonjk/argocd-demo.git
+        revision: main
         directories:
-          - path: "sample/helm/*"
+          - path: "my-apps/*"
   template:
     metadata:
-      name: '{{`{{path.basename}}`}}'
+      name: '{{path.basename}}'
     spec:
       project: default
       source:
-        repoURL: https://github.com/yoonjk/argocd-demo
-        path: '{{`{{path}}`}}'
+        repoURL: https://github.com/yoonjk/argocd-demo.git
+        path: '{{path}}'
         targetRevision: HEAD
       destination:
         server: https://kubernetes.default.svc
