--- a/lab07/01/eventlistener-ingress.yaml
+++ b/lab07/01/eventlistener-ingress.yaml
@@ -1,18 +1,18 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress 
 metadata: 
-  name: argocd-ingress 
+  name: sample-ingress 
   annotations: 
     kubernetes.io/ingress.class: nginx 
 spec:
   rules:
-  - host: argocd.169.51.203.127.nip.io
+  - host: eventlistener.169.51.200.74.nip.io
     http: 
       paths: 
-      - path: /
+      - path: /example
         pathType: Prefix 
         backend: 
           service:
-            name: argocd-server
+            name: webhook-eventsource-svc
             port: 
-              number: 80
+              number: 12000
