Build build webhook

--- a/lab07/01/cicd-sensor.yaml
+++ b/lab07/01/cicd-sensor.yaml
@@ -27,6 +27,8 @@ spec:
               metadata:
                 generateName: sample-webhook-
               spec:
+                artifactRepositoryRef:
+                  configMap: artifact-repositories # or any other ConfigMap
                 arguments:
                   parameters:
                     - name: cloneUrl
