--- a/appendix/minio/minio-pvc.yaml
+++ b/appendix/minio/minio-pvc.yaml
@@ -1,12 +1,11 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: cicd-workflow-pvc
+  name: minio-pvc
 spec:
+  storageClassName: standard
   accessModes:
-  - ReadWriteOnce
+    - ReadWriteOnce
   resources:
     requests:
       storage: 1Gi
-  storageClassName: standard
-
