--- a/lab05/02/ingress.yaml
+++ b/lab05/02/ingress.yaml
@@ -1,13 +1,13 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: user00-eventlistener
+  name: eventlistener
   annotations:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
 spec:
   rules:
-    - host: user00-eventlistener.159.122.179.241.nip.io
+    - host: eventlistener.169.51.200.74.nip.io
       http:
         paths:
           - path: /example
