--- a/lab07/01/ci-workflowtemplate-buildah-deploy.yaml
+++ b/lab07/01/ci-workflowtemplate-buildah-deploy.yaml
@@ -38,7 +38,7 @@ spec:
     container:
       image: gcr.io/cloud-builders/mvn:latest
       command: [sh, -c]
-      args: ["cd /src && ls -a &&  mvn clean package -DskipTests"]
+      args: ["cd /src && ls -al &&  mvn clean package -DskipTests"]
     outputs:
       artifacts:
       - name: source
