Add argo workflow gitops2

--- a/lab07/01/github-credentials.yaml
+++ b/lab07/01/github-credentials.yaml
@@ -3,6 +3,6 @@ kind: Secret
 metadata:
   name: github-credentials
 stringData:
-  username: nexweb1@gmail.com
-  personal_access_token: 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
+  username: user git account
+  personal_access_token: <personal_access_token>
 type: kubernetes.io/basic-auth
