--- a/lab03/02/canary-rollouts.yaml
+++ b/lab03/02/canary-rollouts.yaml
@@ -1,10 +1,13 @@
-apiVersion: argoproj.io/v1alpha1
+apiVersion: argoproj.io/v1alpha1 
 kind: Rollout
 metadata:
-  name: canary-rollouts-demo
+  name: rollouts-demo
 spec:
+  replicas: 5
   strategy:
     canary:
+      canaryService: rollouts-demo-canary
+      stableService: rollouts-demo-stable
       steps:
       - setWeight: 20
       - pause: {}
@@ -12,17 +15,18 @@ spec:
       - pause: {duration: 2m}
       - setWeight: 60
       - pause: {duration: 10}
+      - pause: {}
       - setWeight: 80
       - pause: {duration: 10}
+      - setWeight: 100
   revisionHistoryLimit: 2
-  replicas: 5
   selector:
     matchLabels:
-      app: canary-rollouts-demo
+      app: rollouts-demo
   template:
     metadata:
       labels:
-        app: canary-rollouts-demo
+        app: rollouts-demo
     spec:
       containers:
       - name: rollouts-demo
@@ -35,4 +39,3 @@ spec:
           requests:
             memory: 32Mi
             cpu: 5m
-
