--- a/lab03/03/canary-services.yaml
+++ b/lab03/03/canary-services.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: rollouts-demo-canary
+  name: canary-demo-canary
 spec:
   ports:
   - port: 80
@@ -9,13 +9,13 @@ spec:
     protocol: TCP
     name: http
   selector:
-    app: rollouts-demo
+    app: canary-demo
 
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: rollouts-demo-stable
+  name: canary-demo-stable
 spec:
   ports:
   - port: 80
@@ -23,6 +23,4 @@ spec:
     protocol: TCP
     name: http
   selector:
-    app: rollouts-demo
-
-    
+    app: canary-demo
